tests/spec/compile-fail/005_raw_ffi.zn
// category: compile-fail
// profile: hosted
// purpose: raw C ABI declarations require an explicit trust boundary

module tests.fail.rawFfi;

extern "C" fn read(fd: I32, buffer: USize, length: USize) -> ISize;
// expected-error: raw FFI declaration requires trust
